{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 136,
  "lineage": "6abac435-8cdc-1205-4ef5-f06901ce0eab",
  "resources": [
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:698708524837:security-group/sg-033c6b46933fda048",
            "description": "Security group for the consul launch configuration",
            "egress": [],
            "id": "sg-033c6b46933fda048",
            "ingress": [],
            "name": "consul20200519162512032500000004",
            "name_prefix": "consul",
            "owner_id": "698708524837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul"
            },
            "timeouts": null,
            "vpc_id": "vpc-043f7ee683a863362"
          }
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:698708524837:security-group/sg-056440fa074f270f5",
            "description": "Security group for the vault launch configuration",
            "egress": [],
            "id": "sg-056440fa074f270f5",
            "ingress": [],
            "name": "vault20200519162512030100000003",
            "name_prefix": "vault",
            "owner_id": "698708524837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault"
            },
            "timeouts": null,
            "vpc_id": "vpc-043f7ee683a863362"
          }
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3276594827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1382786846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-056440fa074f270f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_api_inbound_from_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8200,
            "id": "sgrule-453544212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8400,
            "id": "sgrule-66777581",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8400,
            "id": "sgrule-2037546693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cluster_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8201,
            "id": "sgrule-4280065572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8201,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cluster_inbound_from_self_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8200,
            "id": "sgrule-2189154832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-192899872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-926248630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-1974503864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-2473250137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3925917611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3018421724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-296529151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-282098513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-474415485",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-898078013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-1868779111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-1847564745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-3088622226",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-2446866130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-3971641019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-2616118561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-2457177123",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-1068592846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8300,
            "id": "sgrule-4086173948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul_cluster.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8300,
            "id": "sgrule-1629504841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1858838534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c6b46933fda048",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2257892421",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056440fa074f270f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vault_cluster.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vault_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}